--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "scripts": {
-      "start": "nodemon server.js"
-    }
+    "redis": "^4.7.0"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
